# ChatServer

./: CMakeLists.txt  readme.md
include/server/: ChatServer.hpp  ChatService.hpp  public.hpp
include/server/db/: mysqldb.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: mysqldb.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
